syntax = "proto3";

package stream;

option go_package = ".";

message UserRegistrationsReq {
  string phone = 1;
  string password = 2;
}

message UserRegistrationsResp {
  int64 id = 1;
}

service User {
  rpc UserRegistrations(UserRegistrationsReq) returns (UserRegistrationsResp);
}